--- a/params/params.yaml
+++ b/params/params.yaml
@@ -1,6 +1,6 @@
 arduino:
   port: /dev/ttyUSB0
-  kind: uno
+  kind: mega
   pin:
     battery: adc0
     gasPedal: adc1
@@ -53,3 +53,8 @@ throttle:
   p: 1
   i: 0.1
   d: 0.5
+
+gui:
+  winX: 640
+  winY: 480
+  fullscreen: False
