--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
         "/home/alex/catkin_ws/devel/lib/python2.7/dist-packages",
         "/opt/ros/kinetic/lib/python2.7/dist-packages"
     ],
-    "python.pythonPath": "/usr/bin/python"
+    "python.pythonPath": "/usr/bin/python3"
 }
