--- a/statemachine/CMakeLists.txt
+++ b/statemachine/CMakeLists.txt
@@ -51,12 +51,11 @@ find_package(catkin REQUIRED COMPONENTS
 #   state.msg
 #)
 
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+# Generate services in the 'srv' folder
+#add_service_files(
+#  FILES
+#  updateParams.srv
+#)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
