--- a/sdcparams/params.yaml
+++ b/sdcparams/params.yaml
@@ -30,11 +30,13 @@ gaspedal:
   max: 900
 
 lane:
-  heightmultiplier: 10
-  cropmultiplier: 2
-  bottommultiplier: 1
   low_threshold: 50
   high_threshold: 250
+  whiteMaskLow: 160
+  whiteMaskHigh: 255
+  topWidth: 10
+  height: 2.9
+  bottomWidth: 100
 
 usb_cam:
   video_device: /dev/video0
